[gd_scene load_steps=3 format=3 uid="uid://b8dfnft3s178r"]

[ext_resource type="Script" path="res://src/Player/open_phase_hud.gd" id="1_t0yrt"]
[ext_resource type="Theme" uid="uid://c1o0775c62lgb" path="res://src/Player/PopupPanel.tres" id="2_0qwph"]

[node name="OpenPhaseHud" type="CanvasLayer"]
script = ExtResource("1_t0yrt")

[node name="DesignMenu" type="Control" parent="."]
layout_mode = 3
anchor_top = 0.072
anchor_right = 1.0
anchor_bottom = 0.433
offset_top = 0.119999
offset_bottom = 0.179977
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_0qwph")

[node name="ActionMenu" type="HBoxContainer" parent="DesignMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.261
anchor_top = -0.2
anchor_right = 0.444
offset_left = 0.439987
offset_right = -0.240021
offset_bottom = 1.0
theme_override_constants/separation = 12

[node name="Brush" type="Button" parent="DesignMenu/ActionMenu"]
layout_mode = 2
text = "Brush
"

[node name="Feed" type="Button" parent="DesignMenu/ActionMenu"]
layout_mode = 2
text = "Feed"

[node name="Collect" type="Button" parent="DesignMenu/ActionMenu"]
layout_mode = 2
text = "Collect"

[node name="Time" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 158.0
offset_top = 1.0
offset_right = 199.0
offset_bottom = 24.0
grow_horizontal = 2
text = "00:00"

[connection signal="pressed" from="DesignMenu/ActionMenu/Brush" to="." method="_on_brush_pressed"]
[connection signal="pressed" from="DesignMenu/ActionMenu/Feed" to="." method="_on_feed_pressed"]
[connection signal="pressed" from="DesignMenu/ActionMenu/Collect" to="." method="_on_collect_pressed"]
